--- a/flutter2.0-firebasestarter/android/app/src/main/AndroidManifest.xml
+++ b/flutter2.0-firebasestarter/android/app/src/main/AndroidManifest.xml
@@ -35,14 +35,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" 
+        <!-- <meta-data android:name="com.facebook.sdk.ApplicationId" 
         android:value="@string/facebook_app_id"/>
     
     <activity android:name="com.facebook.FacebookActivity"
         android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-        android:label="@string/app_name" />
-    <activity
+        android:label="@string/app_name" /> -->
+    <!-- <activity
         android:name="com.facebook.CustomTabActivity"
         android:exported="true">
         <intent-filter>
@@ -51,7 +51,7 @@
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="@string/fb_login_protocol_scheme" />
         </intent-filter>
-    </activity>
+    </activity> -->
 
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
